err/decent-tools.err
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decent_tools-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/dn'...
Compiling './lib/python3.5/site-packages/dn/bsl.py'...
***   File "./lib/python3.5/site-packages/dn/bsl.py", line 171
    print repr(self.int_mem)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dn/lusb'...
Listing './lib/python3.5/site-packages/dn/tc65i'...
Listing './lib/python3.5/site-packages/msp430'...
Listing './lib/python3.5/site-packages/msp430/asm'...
Listing './lib/python3.5/site-packages/msp430/asm/definitions'...
Listing './lib/python3.5/site-packages/msp430/bsl'...
Listing './lib/python3.5/site-packages/msp430/bsl/target'...
Listing './lib/python3.5/site-packages/msp430/bsl5'...
Listing './lib/python3.5/site-packages/msp430/gdb'...
Listing './lib/python3.5/site-packages/msp430/jtag'...
Compiling './lib/python3.5/site-packages/msp430/jtag/dco.py'...
***   File "./lib/python3.5/site-packages/msp430/jtag/dco.py", line 410
    except Exception, msg:                  # every Exception is caught and displayed
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/msp430/legacy'...
Listing './lib/python3.5/site-packages/msp430/listing'...
Listing './lib/python3.5/site-packages/msp430/memory'...
Listing './lib/python3.5/site-packages/msp430/shell'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyftdi'...
Listing './lib/python3.5/site-packages/pyftdi/serialext'...
Listing './lib/python3.5/site-packages/pyftdi-0.28.2.egg-info'...
Listing './lib/python3.5/site-packages/pyserial-2.7.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_msp430_tools-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/pyusb-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/usb'...
Listing './lib/python3.5/site-packages/usb/backend'...
Listing './share'...
Listing './share/python-wheels'...
